--- a/deploy/dev.yaml
+++ b/deploy/dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: nais.io/v1alpha1
 kind: Application
 metadata:
-  name: spedisjon
+  name: {{app}}
   namespace: default
   labels:
     team: {{team}}
