--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: {{team}}
 spec:
-  image: {{image}}:{{tag}}
+  image: "{{image}}:{{tag}}"
   port: 8080
   liveness:
     path: isalive
