--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -55,3 +55,5 @@ spec:
     value: spedisjon
   - name: VAULT_MOUNTPATH
     value: postgresql/preprod-fss/
+  - name: AKTORREGISTERET_URL
+    value: https://app-q1.adeo.no/aktoerregister
