--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -55,3 +55,5 @@ spec:
     value: spedisjon
   - name: VAULT_MOUNTPATH
     value: postgresql/prod-fss/
+  - name: AKTORREGISTERET_URL
+    value: https://app.adeo.no/aktoerregister
