--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -40,7 +40,7 @@ spec:
         kvPath: /serviceuser/data/prod/srvspedisjon
   env:
   - name: STREAM_TO_RAPID
-    value: "false"
+    value: "true"
   - name: KAFKA_BOOTSTRAP_SERVERS
     value: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443
   - name: KAFKA_CONSUMER_GROUP_ID
