--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -27,6 +27,8 @@ spec:
     min: 1
     max: 1
     cpuThresholdPercentage: 90
+  kafka:
+    pool: nav-dev
   prometheus:
     enabled: true
     path: /metrics
@@ -39,6 +41,8 @@ spec:
       - mountPath: /var/run/secrets/nais.io/service_user
         kvPath: /serviceuser/data/dev/srvspedisjon
   env:
+  - name: KAFKA_PREFER_ON_PREM
+    value: "true"
   - name: KAFKA_BOOTSTRAP_SERVERS
     value: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
   - name: KAFKA_CONSUMER_GROUP_ID
