--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -27,6 +27,8 @@ spec:
     min: 1
     max: 3
     cpuThresholdPercentage: 90
+  kafka:
+    pool: nav-prod
   prometheus:
     enabled: true
     path: /metrics
@@ -39,6 +41,8 @@ spec:
       - mountPath: /var/run/secrets/nais.io/service_user
         kvPath: /serviceuser/data/prod/srvspedisjon
   env:
+  - name: KAFKA_PREFER_ON_PREM
+    value: "true"
   - name: STREAM_TO_RAPID
     value: "true"
   - name: KAFKA_BOOTSTRAP_SERVERS
