--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -47,6 +47,8 @@ spec:
     value: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
+  - name: KAFKA_RAPID_TOPIC_AIVEN
+    value: tbd.rapid.v1
   - name: KAFKA_RAPID_TOPIC
     value: helse-rapid-v1
   - name: KAFKA_EXTRA_TOPIC
