--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -43,14 +43,14 @@ spec:
   env:
   - name: KAFKA_PREFER_ON_PREM
     value: "true"
-  - name: STREAM_TO_RAPID
-    value: "true"
   - name: KAFKA_BOOTSTRAP_SERVERS
     value: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
   - name: KAFKA_RAPID_TOPIC
     value: helse-rapid-v1
+  - name: KAFKA_RAPID_TOPIC_AIVEN
+    value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
     value: privat-sykepenger-inntektsmelding,syfo-soknad-v2
   - name: DATABASE_HOST
