--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -63,3 +63,5 @@ spec:
     value: postgresql/preprod-fss/
   - name: AKTORREGISTERET_URL
     value: https://app-q1.adeo.no/aktoerregister
+  - name: FREMTIDIG_SØKNAD_TOGGLE
+    value: "true"
