Det er ikke lov med ø i yaml ... :(
Co-authored-by: Knut Nygaard <knut.nygaard@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -63,5 +63,5 @@ spec:
     value: postgresql/preprod-fss/
   - name: AKTORREGISTERET_URL
     value: https://app-q1.adeo.no/aktoerregister
-  - name: FREMTIDIG_SØKNAD_TOGGLE
+  - name: FREMTIDIG_SOKNAD_TOGGLE
     value: "true"
