--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -50,7 +50,7 @@ spec:
   - name: KAFKA_RAPID_TOPIC_AIVEN
     value: tbd.rapid.v1
   - name: KAFKA_RAPID_TOPIC
-    value: not-in-use-but-required-in-rnr-⛔️
+    value: helse-rapid-v1
   - name: KAFKA_EXTRA_TOPIC
     value: privat-sykepenger-inntektsmelding,syfo-soknad-v2
   - name: DATABASE_HOST
