--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -48,7 +48,7 @@ spec:
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
   - name: KAFKA_RAPID_TOPIC
-    value: not-in-use-but-required-in-rnr-⛔️
+    value: helse-rapid-v1
   - name: KAFKA_RAPID_TOPIC_AIVEN
     value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
