--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -41,18 +41,12 @@ spec:
       - mountPath: /var/run/secrets/nais.io/service_user
         kvPath: /serviceuser/data/prod/srvspedisjon
   env:
-  - name: KAFKA_PREFER_ON_PREM
-    value: "true"
-  - name: KAFKA_BOOTSTRAP_SERVERS
-    value: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
   - name: KAFKA_RAPID_TOPIC
-    value: helse-rapid-v1
-  - name: KAFKA_RAPID_TOPIC_AIVEN
     value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
-    value: privat-sykepenger-inntektsmelding,syfo-soknad-v2
+    value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
   - name: DATABASE_HOST
     value: a01dbfl039.adeo.no
   - name: DATABASE_PORT
