--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,7 @@ jobs:
       - name: create docker tag
         run: echo "TAG=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
     outputs:
-      image: docker.pkg.github.com/${{ github.repository }}/spedisjon:${{ env.TAG }}
+      image: ghcr.io/${{ github.repository }}/spedisjon:${{ env.TAG }}
 
   build:
     name: build docker image
@@ -32,8 +32,8 @@ jobs:
       - name: build docker image
         run: docker build . --pull -t ${{ needs.set_version.outputs.image }}
       - name: push docker image
+          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
         run: |
-          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} https://docker.pkg.github.com
           docker push ${{ needs.set_version.outputs.image }}
 
   snyk:
