--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,8 +32,8 @@ jobs:
       - name: build docker image
         run: docker build . --pull -t ${{ needs.set_version.outputs.image }}
       - name: push docker image
-          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
         run: |
+          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
           docker push ${{ needs.set_version.outputs.image }}
 
   snyk:
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Gradle vulnerability check
-        uses: snyk/actions/gradle@master
+        uses: snyk/actions/gradle-jdk12@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           ORG_GRADLE_PROJECT_githubUser: x-access-token
