Oppdater snyk-job i workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,13 +40,11 @@ jobs:
     name: check vulnerabilities
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Gradle vulnerability check
-        uses: snyk/actions/gradle-jdk12@master
+        uses: snyk/actions/gradle@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          ORG_GRADLE_PROJECT_githubUser: x-access-token
-          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: --project-name=spedisjon --org=tbd-ty7 --fail-on=all
           command: monitor
