--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -32,10 +32,16 @@ spec:
   prometheus:
     enabled: true
     path: /metrics
-  webproxy: true
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        diskAutoresize: true
+        pointInTimeRecovery: true
+        name: spedisjon
+        databases:
+          - name: spedisjon
+            envVarPrefix: DATABASE
   secureLogs:
-    enabled: true
-  vault:
     enabled: true
   env:
   - name: KAFKA_CONSUMER_GROUP_ID
@@ -44,12 +50,4 @@ spec:
     value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
     value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
-  - name: DATABASE_HOST
-    value: a01dbfl039.adeo.no
-  - name: DATABASE_PORT
-    value: "5432"
-  - name: DATABASE_NAME
-    value: spedisjon
-  - name: VAULT_MOUNTPATH
-    value: postgresql/prod-fss/
 
