--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -37,6 +37,7 @@ spec:
       - type: POSTGRES_14
         diskAutoresize: true
         pointInTimeRecovery: true
+        tier: db-custom-96-638976
         name: spedisjon
         databases:
           - name: spedisjon
