--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -50,5 +50,7 @@ spec:
     value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
     value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
+  - name: KARANTENE_TID
+    value: 1
 
 
