Reduserer økende puls i dev
Co-authored-by: Håkon Arneng Holmstedt <hakon.arneng.holmstedt@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -52,5 +52,7 @@ spec:
     value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
   - name: KARANTENE_TID
     value: 1
+  - name: PULS_TID
+    value: 10
 
 
