--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -53,4 +53,6 @@ spec:
     value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
   - name: KARANTENE_TID
     value: 300
+  - name: PULS_TID
+    value: 60
 
