--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -52,7 +52,7 @@ spec:
   - name: KAFKA_EXTRA_TOPIC
     value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
   - name: KARANTENE_TID
-    value: 300
+    value: "300"
   - name: PULS_TID
-    value: 60
+    value: "60"
 
