--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -10,6 +10,7 @@ spec:
   port: 8080
   strategy:
     type: Recreate
+  leaderElection: true
   liveness:
     path: isalive
     initialDelay: 5
@@ -25,7 +26,7 @@ spec:
       memory: 128Mi
   replicas:
     min: 1
-    max: 1
+    max: 3
     cpuThresholdPercentage: 90
   kafka:
     pool: nav-dev
