--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,6 +2,13 @@ name: Bygg og deploy
 
 on:
   push:
+    paths-ignore:
+      - 'spedisjon-opprydding-dev/**'
+      - 'workflows/spedisjon-opprydding-dev.yml'
+      - '.idea/**'
+      - 'README.md'
+      - 'LICENSE'
+      - 'CODEOWNERS'
     branches:
       - master
 
