--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -1,16 +1,14 @@
-name: Bygg og deploy
+name: Spedisjon opprydding dev
 
 on:
   push:
-    paths-ignore:
-      - 'opprydding-dev/**'
-      - 'workflows/spedisjon-opprydding-dev.yml'
-      - '.idea/**'
-      - 'README.md'
-      - 'LICENSE'
-      - 'CODEOWNERS'
+    paths:
+      - 'spedisjon-opprydding-dev/**'
+      - '.github/workflows/spedisjon-opprydding-dev.yml'
+      - 'deploy/spedisjon-opprydding-dev.yml'
+      - 'build.gradle.kts'
     branches:
-      - master
+      - opprydding-dev
 
 jobs:
   set_version:
@@ -26,15 +24,11 @@ jobs:
     name: build docker image
     runs-on: ubuntu-latest
     needs: set_version
-    permissions:
-      packages: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          distribution: 'temurin'
           java-version: '17.x'
-          cache: 'gradle'
       - name: test and build
         run: ./gradlew test build
         env:
@@ -57,18 +51,5 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: deploy/dev.yml
-          IMAGE: ${{ needs.set_version.outputs.image }}
-
-  deployProd:
-    name: deploy to prod
-    needs: [set_version, deployDev]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: deploy/prod.yml
+          RESOURCE: deploy/spedisjon-opprydding-dev.yml
           IMAGE: ${{ needs.set_version.outputs.image }}
