--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -11,35 +11,34 @@ on:
       - opprydding-dev
 
 jobs:
-  set_version:
-    name: set image name
-    runs-on: ubuntu-latest
-    steps:
-      - name: create docker tag
-        run: echo "TAG=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
-    outputs:
-      image: ghcr.io/${{ github.repository }}/spedisjon:${{ env.TAG }}
-
   build:
+    permissions:
+      contents: "read"
+      id-token: "write"
     name: build docker image
     runs-on: ubuntu-latest
-    needs: set_version
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17.x'
+          cache: 'gradle'
       - name: test and build
-        run: ./gradlew test build
         env:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
-      - name: build docker image
-        run: docker build . --pull -t ${{ needs.set_version.outputs.image }}
-      - name: push docker image
-        run: |
-          docker login --username "$GITHUB_REPOSITORY" -p ${{ secrets.GITHUB_TOKEN }} ghcr.io
-          docker push ${{ needs.set_version.outputs.image }}
+        run: ./gradlew :spedisjon-opprydding-dev:test :spedisjon-opprydding-dev:build
+      - uses: nais/docker-build-push@v0
+        id: docker-build-push
+        with:
+          team: 'tbd'
+          dockerfile: Dockerfile-opprydding-dev
+          image_suffix: opprydding-dev
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
 
   deployDev:
     name: deploy to dev
