Kanskje hen vil skrive til packages?
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       contents: "read"
       id-token: "write"
+      packages: "write"
     name: build docker image
     runs-on: ubuntu-latest
     steps:
