Dockerfile i path i workflow
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -3,6 +3,7 @@ name: Spedisjon opprydding dev
 on:
   push:
     paths:
+      - 'Dockerfile-opprydding-dev'
       - 'spedisjon-opprydding-dev/**'
       - '.github/workflows/spedisjon-opprydding-dev.yml'
       - 'deploy/spedisjon-opprydding-dev.yml'
