Network policy for å snakke med spedisjon-db
Co-authored-by: Hege Haavaldsen <hege.haavaldsen@nav.no>

--- a/deploy/spedisjon-opprydding-dev.yml
+++ b/deploy/spedisjon-opprydding-dev.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: tbd
   labels:
     team: tbd
-    db: spedisjon
+    db_policy_user: spedisjonbruker
 spec:
   image: {{image}}
   port: 8080
