Oppretter db-bruker for spedisjon-opprydding-dev og gir tilgang til db
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -40,6 +40,8 @@ spec:
         databases:
           - name: spedisjon
             envVarPrefix: DATABASE
+            users:
+              - name: spedisjon-opprydding-dev
   secureLogs:
     enabled: true
   env:
