--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,11 +19,15 @@ jobs:
     name: build docker image
     runs-on: ubuntu-latest
     needs: set_version
+    permissions:
+      packages: write
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17.x'
+          cache: 'gradle'
       - name: test and build
         run: ./gradlew test build
         env:
