Legger til secret for db-bruker for spedisjon-opprydding-dev
Co-authored-by: Marte Tårnes <marte.tarnes@nav.no>
Co-authored-by: David Steinsland <david.steinsland@nav.no>
Co-authored-by: Morten Tholander <morten.tholander@nav.no>

--- a/deploy/spedisjon-opprydding-dev.yml
+++ b/deploy/spedisjon-opprydding-dev.yml
@@ -39,8 +39,8 @@ spec:
           kind: Project
           name: tbd-dev-7ff9
         role: roles/cloudsql.client
-#  envFrom:
-#    - secret: trenger vi dette?
+  envFrom:
+    - secret: google-sql-spedisjon-spedisjon-spedisjon-opprydding-de-31466522
   secureLogs:
     enabled: true
   env:
