Bygger spedisjon-opprydding-dev på master
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -9,7 +9,7 @@ on:
       - 'deploy/spedisjon-opprydding-dev.yml'
       - 'build.gradle.kts'
     branches:
-      - opprydding-dev
+      - master
 
 jobs:
   build:
