Bygger ikke spedisjon ved endring i deploy av spedisjon-opprydding-dev
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,6 +5,7 @@ on:
     paths-ignore:
       - 'spedisjon-opprydding-dev/**'
       - 'workflows/spedisjon-opprydding-dev.yml'
+      - 'deploy/spedisjon-opprydding-dev.yml'
       - '.idea/**'
       - 'README.md'
       - 'LICENSE'
