--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -24,8 +24,12 @@ spec:
       memory: 128Mi
   replicas:
     min: 2
-    max: 3
-    cpuThresholdPercentage: 75
+    max: 6
+    scalingStrategy:
+      kafka:
+        topic: flex.sykepengesoknad
+        consumerGroup: spedisjon-v1
+        threshold: 200
   kafka:
     pool: nav-prod
   prometheus:
@@ -36,7 +40,7 @@ spec:
       - type: POSTGRES_14
         diskAutoresize: true
         pointInTimeRecovery: true
-        tier: db-custom-4-15360
+        tier: db-custom-2-8192
         name: spedisjon
         databases:
           - name: spedisjon
