--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -37,11 +37,11 @@ spec:
     path: /metrics
   gcp:
     sqlInstances:
-      - type: POSTGRES_14
+      - type: POSTGRES_15
         diskAutoresize: true
-        pointInTimeRecovery: true
-        tier: db-custom-2-8192
-        name: spedisjon
+        diskSize: 150
+        tier: db-custom-1-3840
+        name: spedisjon2
         databases:
           - name: spedisjon
             envVarPrefix: DATABASE
