--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -48,6 +48,10 @@ spec:
               - name: spedisjon-opprydding-dev
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   env:
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
