--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -50,6 +50,10 @@ spec:
             envVarPrefix: DATABASE
   secureLogs:
     enabled: true
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   env:
   - name: KAFKA_CONSUMER_GROUP_ID
     value: spedisjon-v1
