--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -16,4 +16,4 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: deploy/prod-alertmanagerconfig.yml
+          RESOURCE: deploy/prod-sendt-søknad-alertrule.yml
