Prøver å bytte label
Co-authored-by: Sivert Lunsæter <sivert.frang.lunseter@nav.no>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,6 +10,8 @@ on:
       - 'README.md'
       - 'LICENSE'
       - 'CODEOWNERS'
+      - '.github/workflows/alerts.yml'
+      - 'deploy/prod-sendt-søknad-alertrule.yml'
     branches:
       - master
 
