--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -10,14 +10,12 @@ spec:
     - name: sendt-soknad-alert
       rules:
         - alert: Alert på at vi ikke har mottatt søknader
-          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) == 0 and hour() >= 5 <= 15
+          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0 and hour() >= 5 <= 15
           for: 1m
           annotations:
-            consequence: "_*{{ $labels.container }}*_ has a working set of {{ $value }} bytes, there is no consequence"
-            action: "no need to do _anything_"
-            documentation: "https://prometheus.io/docs/prometheus/latest/querying/basics/"
-            summary: "Container _*{{ $labels.container }}*_ has a working set of {{ $value }} bytes."
-            sla: "no need to respond"
+            navn: "Ikke mottatt noen søknader siste 10 minuttene"
+            beskrivelse: "Det er ikke registrert noen sendte søknader i Spedisjon. Hør med Flex om det er noe krøll"
+            detaljer: "Sjekk om du ser noe rart på <https://grafana.nav.cloud.nais.io/d/H8jR8MFGk/flex-kafka-lag?orgId=1&refresh=5m&viewPanel=28|grafana> eller <https://logs.adeo.no/app/r/s/NGiJM|kibana> da vel"
           labels:
             severity: "error"
             team_spleiselaget_alerts: slack
