--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -19,3 +19,16 @@ spec:
             severity: "error"
             team_spleiselaget_alerts: slack
             alert_type: custom
+
+    - name: send-soknad-ok-info
+      rules:
+        - alert: Søknadstrømmen ser bra ut
+          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day() == 5
+          for: 1h
+          annotations:
+            beskrivelse: "Antall mottatte søknader fra Flex ser bra ut den siste timen!"
+            detaljer: " Dette er en 'alt er ok' melding, så vi ikke bekymrer oss for at noe er galt"
+          labels:
+            severity: "info"
+            team_spleiselaget_alerts: slack
+            alert_type: custom
