day() er ikke en query func i Prometheus, prøver day_of_week
Co-authored-by: Erik M. Forsman <erik.maximilian.forsman@nav.no>
Co-authored-by: Amalie Erdal Mansåker <amalie.erdal.mansaker@nav.no>

--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -21,7 +21,7 @@ spec:
             alert_type: custom
 
         - alert: Søknadstrømmen ser bra ut
-          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day() == 5
+          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5
           for: 1h
           annotations:
             beskrivelse: "Antall mottatte søknader fra Flex ser bra ut den siste timen!"
