Set for til 1m istedet for 1h for å se om det trigger alert

--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -24,7 +24,7 @@ spec:
       rules:
         - alert: Søknadstrømmen ser bra ut
           expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5
-          for: 1h
+          for: 1m
           annotations:
             beskrivelse: "Antall mottatte søknader fra Flex ser bra ut den siste timen!"
             detaljer: "Dette er en 'alt er ok' melding, så vi ikke bekymrer oss for at noe er galt"
