--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -23,8 +23,8 @@ spec:
     - name: sendt-soknad-info
       rules:
         - alert: Søknadstrømmen ser bra ut
-          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5
-          for: 1m
+          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5 and hour() = 9 and minute() < 30
+          for: 1h
           annotations:
             beskrivelse: "Antall mottatte søknader fra Flex ser bra ut den siste timen!"
             detaljer: "Dette er en 'alt er ok' melding, så vi ikke bekymrer oss for at noe er galt"
