Fjern space i action liste Ignorer ny alert fil i master bygg. Flikk litt på tekst i alert

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,7 @@ on:
       - 'CODEOWNERS'
       - '.github/workflows/alerts.yml'
       - 'deploy/prod-sendt-søknad-alertrule.yml'
+      - 'deploy/prod-inntektsmelding-alertrule.yml'
     branches:
       - master
 
