Fiks enda en sammenligning i prometheusrule med en til =
Co-authored-by: David Steinsland <david.steinsland@nav.no>

--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -23,7 +23,7 @@ spec:
     - name: sendt-soknad-info
       rules:
         - alert: Søknadstrømmen ser bra ut
-          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5 and hour() = 9 and minute() < 30
+          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) > 0.01 and day_of_week() == 5 and hour() == 9 and minute() < 30
           for: 1h
           annotations:
             beskrivelse: "Antall mottatte søknader fra Flex ser bra ut den siste timen!"
