--- a/deploy/prod-inntektsmelding-alertrule.yml
+++ b/deploy/prod-inntektsmelding-alertrule.yml
@@ -10,7 +10,7 @@ spec:
     - name: inntektmelding-alert
       rules:
         - alert: Det er mottatt mistenkelig få inntektsmeldinger
-          expr: sum(rate(message_counter_total{app="spedisjon", validated="ok", river="Inntektsmeldinger"}[10m])) < 0.01 and hour() >= 5 <= 15
+          expr: sum(rate(message_counter_total{app="spedisjon", validated="ok", river="Inntektsmeldinger"}[10m])) < 0.01 and hour() >= 6 <= 12 and day_of_week() < 6
           for: 1m
           annotations:
             beskrivelse: "Det er ikke registert noen/veldig få inntektsmeldinger i Spedisjon. Hør med HAG om det er noe krøll."
@@ -23,7 +23,7 @@ spec:
     - name: inntektsmelding-ok-info
       rules:
         - alert: Inntektsmelding strømmen ser bra ut
-          expr: sum(rate(message_counter_total{app="spedisjon", validated="ok", river="Inntektsmeldinger"}[10m])) > 0.01 and day_of_week() == 5 and hour() == 9 and minute() < 30
+          expr: sum(rate(message_counter_total{app="spedisjon", validated="ok", river="Inntektsmeldinger"}[10m])) > 0.01 and day_of_week() == 5 and hour() == 7 and minute() < 30
           for: 1h
           annotations:
             beskrivelse: "Antall mottatte inntektsmeldinger fra HAG ser bra ut den siste timen!"
