Litt feil tanke med å unngå helg
Unngår å sjekke helg for søknader og. Åpenbart Ingen som følger med på disse alarmene i helgen uansett

--- a/deploy/prod-sendt-søknad-alertrule.yml
+++ b/deploy/prod-sendt-søknad-alertrule.yml
@@ -10,7 +10,7 @@ spec:
     - name: sendt-soknad-alert
       rules:
         - alert: Det er mottatt mistenkelig få søknader
-          expr: sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) < 0.01 and hour() >= 6 <= 12
+          expr: day_of_week() >= 6 or (sum(rate(message_counter_total{app="spedisjon", river=~"Sendte.*", validated="ok"}[10m])) < 0.01 and hour() >= 6 <= 12)
           for: 1m
           annotations:
             beskrivelse: "Det er ikke registrert noen/veldig få sendte søknader i Spedisjon. Hør med Flex om det er noe krøll"
