--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           team: tbd
           image_suffix: selve
+          dockerfile: Dockerfile
           docker_context: spedisjon-selve
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
