--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -39,6 +39,7 @@ spec:
     sqlInstances:
       - type: POSTGRES_14
         diskAutoresize: true
+        tier: db-f1-micro
         pointInTimeRecovery: true
         name: spedisjon
         databases:
