Send person_slettet etter sletting av person i dev

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths-ignore:
       - 'spedisjon-opprydding-dev/**'
-      - 'workflows/spedisjon-opprydding-dev.yml'
+      - '.github/workflows/spedisjon-opprydding-dev.yml'
       - 'deploy/spedisjon-opprydding-dev.yml'
       - '.idea/**'
       - 'README.md'
