Var visst noe endringer i nais/docker-build-push

--- a/.github/workflows/spedisjon-opprydding-dev.yml
+++ b/.github/workflows/spedisjon-opprydding-dev.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           team: 'tbd'
           image_suffix: opprydding-dev
+          dockerfile: Dockerfile
           docker_context: spedisjon-opprydding-dev
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
