--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -33,6 +33,14 @@ spec:
         topic: flex.sykepengesoknad
         consumerGroup: spedisjon-v1
         threshold: 200
+  azure:
+    application:
+      enabled: true
+      tenant: nav.no
+  accessPolicy:
+    outbound:
+      rules:
+        - application: speed-api
   kafka:
     pool: nav-prod
   prometheus:
