--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -63,8 +63,8 @@ spec:
     value: spedisjon-v1
   - name: KAFKA_RAPID_TOPIC
     value: tbd.rapid.v1
-  - name: KAFKA_EXTRA_TOPIC
-    value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
+#  - name: KAFKA_EXTRA_TOPIC
+#    value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
   - name: KARANTENE_TID
     value: "1800"
 
