--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,6 +34,14 @@ jobs:
         run: ./gradlew spedisjon-selve:build
         env:
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
+      - name: Store reports
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: reports
+          path: |
+            **/build/reports/
+            **/build/test-results/
       - name: build docker image
         uses: nais/docker-build-push@v0
         id: docker-build-push
