--- a/deploy/spedisjon-migrering-dev-policy.yml
+++ b/deploy/spedisjon-migrering-dev-policy.yml
@@ -11,6 +11,9 @@ spec:
     - to:
         - ipBlock:
             cidr: 34.88.43.173/32 # spedisjon
+    - to:
+        - ipBlock:
+            cidr: 35.228.176.0/32 # spleis
   podSelector:
     matchLabels:
       app: spedisjon-migrate
