--- a/deploy/spedisjon-migrering.yml
+++ b/deploy/spedisjon-migrering.yml
@@ -21,6 +21,8 @@ spec:
       mountPath: /var/run/secrets/sql/spedisjon
     - secret: google-sql-spre-subsumsjon
       mountPath: /var/run/secrets/sql/spre_subsumsjon
+    - secret: google-sql-spleis
+      mountPath: /var/run/secrets/sql/spleis
   gcp:
     sqlInstances:
       - type: POSTGRES_16
@@ -46,5 +48,7 @@ spec:
       value: {{ spedisjon_instance }}
     - name: SPRE_SUBSUMSJON_INSTANCE
       value: {{ spre_subsumsjon_instance }}
+    - name: SPLEIS_INSTANCE
+      value: {{ spleis_instance }}
     - name: SPEDISJON_MIGRATE_INSTANCE
       value: spedisjon-migrering
