tillater trafikk fra spedisjon-async
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -35,6 +35,9 @@ spec:
       enabled: true
       tenant: trygdeetaten.no
   accessPolicy:
+    inbound:
+      rules:
+        - application: spedisjon-async
     outbound:
       rules:
         - application: speed-api
