--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -38,6 +38,9 @@ spec:
       enabled: true
       tenant: nav.no
   accessPolicy:
+    inbound:
+      rules:
+        - application: spedisjon-async
     outbound:
       rules:
         - application: speed-api
