--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -67,7 +67,7 @@ spec:
   - name: KAFKA_RAPID_TOPIC
     value: tbd.rapid.v1
   - name: KAFKA_EXTRA_TOPIC
-    value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
+    value: flex.sykepengesoknad
   - name: KARANTENE_TID
     value: "1800"
 
