tilbyr spedisjon bak noen flotte ingresser
Co-authored-by: Simen Ullern <simen.ullern@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -16,6 +16,9 @@ spec:
   readiness:
     path: isready
     initialDelay: 5
+  ingresses:
+    - "https://spedisjon.ansatt.dev.nav.no"
+    - "https://spedisjon.intern.dev.nav.no"
   resources:
     limits:
       memory: 512Mi
