--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -36,6 +36,8 @@ spec:
     inbound:
       rules:
         - application: spedisjon-async
+        - application: sporbar
+        - application: spre-subsumsjon
   prometheus:
     enabled: true
     path: /metrics
