setter periodSeconds lavt
etter litt eksperimentering har jeg observert at k8s ikke registrerer at en pod er "not ready" mens den holder på å skru seg av. For apper med http apier er jo dette litt dumt, for da vil appen kunne få trafikk mens den skal skrus av.

ved å sette periodSeconds til 1 så observerte jeg at appen ble registrert som "not ready" i god tid før den avsluttet.

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -16,6 +16,7 @@ spec:
   readiness:
     path: isready
     initialDelay: 5
+    periodSeconds: 1
   ingresses:
     - "https://spedisjon.ansatt.dev.nav.no"
     - "https://spedisjon.intern.dev.nav.no"
