prøver å speede opp opppstarten litt
k8s dreper spedisjon-async på oppstart, og det var ikke før vi gav podden mer cpu-requests at vi opplevde at den faktisk kom opp

--- a/deploy/dev-async.yml
+++ b/deploy/dev-async.yml
@@ -12,7 +12,9 @@ spec:
     type: Recreate
   liveness:
     path: isalive
-    initialDelay: 5
+    initialDelay: 1
+    periodSeconds: 1
+    failureThreshold: 60
   readiness:
     path: isready
     initialDelay: 5
@@ -20,7 +22,7 @@ spec:
     limits:
       memory: 512Mi
     requests:
-      cpu: 50m
+      cpu: 150m
       memory: 64Mi
   replicas:
     min: 1
