--- a/.github/workflows/alerts.yml
+++ b/.github/workflows/alerts.yml
@@ -11,10 +11,11 @@ on:
 jobs:
   apply-alerts:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: deploy/prod-sendt-søknad-alertrule.yml,deploy/prod-inntektsmelding-alertrule.yml
