--- a/.github/workflows/spedisjon-migrering.yml
+++ b/.github/workflows/spedisjon-migrering.yml
@@ -49,11 +49,12 @@ jobs:
       name: deploy to dev
       needs: build
       runs-on: ubuntu-latest
+      permissions:
+        id-token: write
       steps:
           - uses: actions/checkout@v4
           - uses: nais/deploy/actions/deploy@v2
             env:
-                APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
                 CLUSTER: dev-gcp
                 RESOURCE: deploy/spedisjon-migrering-dev-policy.yml
                 IMAGE: ${{ needs.build.outputs.image }}
@@ -62,11 +63,12 @@ jobs:
       name: deploy to prod
       needs: build
       runs-on: ubuntu-latest
+      permissions:
+        id-token: write
       steps:
           - uses: actions/checkout@v4
           - uses: nais/deploy/actions/deploy@v2
             env:
-                APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
                 CLUSTER: prod-gcp
                 RESOURCE: deploy/spedisjon-migrering-prod-policy.yml
                 IMAGE: ${{ needs.build.outputs.image }}
