gir tilgang til sparkel-arbeidsgiver
Co-authored-by: Erik Maximilian Forsman <erik.maximilian.forsman@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -39,6 +39,7 @@ spec:
         - application: spedisjon-async
         - application: sporbar
         - application: spre-subsumsjon
+        - application: sparkel-arbeidsgiver
   prometheus:
     enabled: true
     path: /metrics
