Gi tilgang til Spaghet

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -40,6 +40,7 @@ spec:
         - application: sporbar
         - application: spre-subsumsjon
         - application: sparkel-arbeidsgiver
+        - application: spaghet
   prometheus:
     enabled: true
     path: /metrics
