--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -43,6 +43,7 @@ spec:
         - application: sporbar
         - application: spre-subsumsjon
         - application: sparkel-arbeidsgiver
+        - application: spaghet
   prometheus:
     enabled: true
     path: /metrics
