🔊 Fortsetter å sende applikasjonslogger til kibana
Co-authored-by: Linus Johansson <linus.sebastian.johansson@nav.no>

--- a/deploy/dev.yml
+++ b/deploy/dev.yml
@@ -58,3 +58,7 @@ spec:
               - name: spedisjon-opprydding-dev
   secureLogs:
     enabled: true
+  observability:
+    logging:
+      destinations:
+        - id: elastic
