--- a/deploy/dev-async.yml
+++ b/deploy/dev-async.yml
@@ -53,11 +53,13 @@ spec:
   secureLogs:
     enabled: true
   env:
-  - name: KAFKA_CONSUMER_GROUP_ID
-    value: tbd-spedisjon-v1
-  - name: KAFKA_RAPID_TOPIC
-    value: tbd.rapid.v1
-  - name: KAFKA_EXTRA_TOPIC
-    value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
-
-
+    - name: KAFKA_CONSUMER_GROUP_ID
+      value: tbd-spedisjon-v1
+    - name: KAFKA_RAPID_TOPIC
+      value: tbd.rapid.v1
+    - name: KAFKA_EXTRA_TOPIC
+      value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
+  observability:
+    logging:
+      destinations:
+        - id: elastic
