--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -64,3 +64,7 @@ spec:
             value: 'write'
   secureLogs:
     enabled: true
+  observability:
+    logging:
+      destinations:
+        - id: elastic
