--- a/deploy/dev-async.yml
+++ b/deploy/dev-async.yml
@@ -34,6 +34,8 @@ spec:
   accessPolicy:
     outbound:
       rules:
+        - application: logging
+          namespace: nais-system
         - application: spedisjon
         - application: speed-api
   kafka:
