--- a/deploy/prod-async.yml
+++ b/deploy/prod-async.yml
@@ -40,6 +40,8 @@ spec:
   accessPolicy:
     outbound:
       rules:
+        - application: logging
+          namespace: nais-system
         - application: spedisjon
         - application: speed-api
   kafka:
