--- a/deploy/prod-async.yml
+++ b/deploy/prod-async.yml
@@ -70,6 +70,8 @@ spec:
       value: tbd-spedisjon-v1
     - name: KAFKA_RAPID_TOPIC
       value: tbd.rapid.v1
+    - name: KAFKA_EXTRA_TOPIC
+      value: flex.sykepengesoknad,helsearbeidsgiver.privat-sykepenger-inntektsmelding
     - name: KARANTENE_TID
       value: "1800"
   observability:
