--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -65,7 +65,9 @@ spec:
           - name: cloudsql.enable_pgaudit
             value: "true"
           - name: pgaudit.log
-            value: 'write'
+            value: "write,ddl,role"
+          - name: pgaudit.log_parameter
+            value: "on"
   secureLogs:
     enabled: true
   observability:
