Lag en database user for å sette opp en BQ kobling

--- a/deploy/prod.yml
+++ b/deploy/prod.yml
@@ -61,6 +61,8 @@ spec:
         databases:
           - name: spedisjon
             envVarPrefix: DATABASE
+            users:
+              - name: bigquery-connection-user
         flags:
           - name: cloudsql.enable_pgaudit
             value: "true"
